Solved long city name overflow and geolocalization at page load

--- a/src/style.css
+++ b/src/style.css
@@ -13,15 +13,16 @@
   position: relative;
   top: 200px;
   left: 30px;
-  padding: 0 30px;
+  padding: 0 10px;
 }
 
-h1 {
+.city {
   margin-left: 30px;
   padding-top: 20px;
   color: #759be0;
   text-shadow: 1px 5px 12px rgba(122, 122, 127, 1);
   color: #759be0;
+  font-size: 40px;
   font-family: "Montserrat", sans-serif;
 }
 
